<resources>
    <string name="app_name">EcoTronik</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="ewastepoint_description">Total Eco Point</string>
    <string name="ewaste_transaction_description">Transaksi</string>
    <string name="greeting">Selamat Datang,</string>
    <string name="notification">notification</string>
    <string name="settings">settings</string>
    <string name="scanner">Scanner</string>
    <string name="form">Form</string>
    <string name="edutron">EduTron</string>
    <string name="redeem">Redeem</string>
    <string name="history">History</string>
    <string name="info">Info</string>
    <string name="greeting2">Halo,</string>
    <string name="label_name">Nama</string>
    <string name="label_address">Alamat</string>
    <string name="label_email">Email</string>
    <string name="label_telp">No Telepon</string>
    <string name="logout">Keluar</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setor">Setor</string>
    <string name="to_home">Halaman Awal</string>
    <string name="sum_waste">Total Sampah</string>
    <string name="waste_point">Total Point</string>
    <string name="ecowaste">%1$s Pcs</string>
    <string name="ecopoint">%1$s EP</string>
    <string name="result_title">Detail Transaksi</string>
    <string name="label_transaction">No Transaksi</string>
    <string name="label_date">Tanggal</string>
    <string name="value_date">12 Mei 2023</string>
    <string name="value_transaction">ET-AD28313</string>
    <string name="waste_category_label">Kategori Sampah</string>
    <string name="waste_count_label">Jumlah (pcs)</string>
    <string name="btn_add">Tambah</string>
    <string name="waste_value">0</string>

    <string name="title_history">Riwayat</string>
    <string name="must_not_empty">Jangan dikosongkan</string>
    <string name="more_then_eight_character">Password harus 8 Karakter</string>
    <string name="input_password">Input Password</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="remind_me">Ingatkan saya</string>
    <string name="forget_password">Lupa Password</string>
    <string name="login_button">Login</string>
    <string name="dont_have_account">Tidak punya Akun</string>
    <string name="btn_registration">Registrasi</string>
    <string name="title_Ecotronik_detail">Electronic Waste</string>
    <string name="message_main_page">Thank you for using Ecotronik</string>

    <string name="title_Ecotronik">EcoTronik</string>
    <string name="title_signup_page">Registrasi</string>
    <string name="registration_name">Nama</string>
    <string name="name_hint">Nama</string>
    <string name="registration_password">Password</string>
    <string name="registration_email">Email</string>
    <string name="registration_confirmation_password">Konfirmasi Password</string>
    <string name="registration_button">Registrasi</string>
    <string name="already_have_account">Sudah Punya Akun?</string>



</resources>