<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.form.FormActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_add"
        android:tint="@color/white"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/tv_waste_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_waste"
        android:textStyle="bold"
        android:textColor="@color/slate_500"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/rv_form"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_waste_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/ecowaste"
        android:textStyle="bold"
        android:textColor="@color/slate_500"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/rv_form"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_border"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_waste_label"/>

    <TextView
        android:id="@+id/tv_point_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waste_point"
        android:textStyle="bold"
        android:textColor="@color/slate_500"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/ecopoint"
        android:textStyle="bold"
        android:textColor="@color/slate_500"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_rounded"
        android:text="@string/setor"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginHorizontal="@dimen/dimen_10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_point"
        app:layout_constraintStart_toStartOf="@+id/tv_point_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_point_label" />


</androidx.constraintlayout.widget.ConstraintLayout>