<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.form.FormResultActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Menunggu"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_time"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_transaction_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_transaction"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_transaction_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_transaction"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_label"/>

        <TextView
            android:id="@+id/tv_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_date"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_label"/>

        <TextView
            android:id="@+id/tv_sum_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Total Sampah"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_label"/>

        <TextView
            android:id="@+id/tv_sum_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecowaste"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_label"/>

        <TextView
            android:id="@+id/tv_point_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Total Point"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sum_label"/>

        <TextView
            android:id="@+id/tv_point_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecopoint"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sum_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_background"
        android:src="@drawable/ic_failed"
        app:layout_constraintEnd_toEndOf="@+id/layout_content"
        app:layout_constraintStart_toStartOf="@+id/layout_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_content"
        android:layout_marginTop="@dimen/dimen_32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>